--- a/css/main.css
+++ b/css/main.css
@@ -267,10 +267,10 @@ hr {
 	height: 0;
 }
 /* PROFIL IMAGE */
-#profil{
+/* #profil{
 	filter: blur(2px);
 }
-
+*/
 /**
  * Lists - (_document-setup.scss)  
  * -------------------------------------------------------------------
